// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/notification/demo/basic.md correctly 1`] = `
<button
  class="wmstool-btn wmstool-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/custom-icon.md correctly 1`] = `
<button
  class="wmstool-btn wmstool-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/custom-style.md correctly 1`] = `
<button
  class="wmstool-btn wmstool-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/duration.md correctly 1`] = `
<button
  class="wmstool-btn wmstool-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/placement.md correctly 1`] = `
<div>
  <div
    class="wmstool-select wmstool-select-enabled"
    style="width:120px;margin-right:10px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="wmstool-select-selection
            wmstool-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="wmstool-select-selection__rendered"
      >
        <div
          class="wmstool-select-selection-selected-value"
          style="display:block;opacity:1"
          title="topRight"
        >
          topRight
        </div>
      </div>
      <span
        class="wmstool-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      Open the notification box
    </span>
  </button>
</div>
`;

exports[`renders ./components/notification/demo/with-btn.md correctly 1`] = `
<button
  class="wmstool-btn wmstool-btn-primary"
  type="button"
>
  <span>
    Open the notification box
  </span>
</button>
`;

exports[`renders ./components/notification/demo/with-icon.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
  <button
    class="wmstool-btn"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;
